--- a/src/components/post-writer/paragraph-writer/styles.css
+++ b/src/components/post-writer/paragraph-writer/styles.css
@@ -11,6 +11,7 @@
 .paragraph-writer-paragraph {
   /* background-color: thistle; */
   width: 95%;
+  overflow: hidden;
   flex: 1;
   margin: 10px 2.5% 10px;
   color: var(--main-green-color);
